# taskmanager

./: CMakeLists.txt  README.md
M3OEP-ajsimone-aemara-main/: CMakeLists.txt  Category.cpp  Category.h  README.md  RecurringTask.cpp  RecurringTask.h  Task.cpp  Task.h  ToDoList copy.cpp  ToDoList.cpp  ToDoList.h  main.cpp  pivot.py  testing.cpp  tt.py
M3OEP-ajsimone-aemara-main/pr3/: index.html  script.js  server.py  style.css
src/: engine.cpp
src/shapes/: cube.cpp
